# stackwise

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/stackwise-cli/: Cargo.toml  README.md
crates/stackwise-cli/assets/: index.html
crates/stackwise-cli/assets/app/: index.html
crates/stackwise-cli/assets/app/assets/: index-2XAw8pvr.js  index-3opQWftG.js  index-5AGsX2Kz.js  index-7oaumtE6.js  index-8-W-JSrj.js  index-B3cX85Rv.css  index-B7NNb0E3.js  index-BACYX0ya.css  index-BAasw0JF.js  index-BBSLF9H2.css  index-BD2CIZ85.css  index-BDPrlyFh.css  index-BF3HS4Bd.js  index-BGGxW35o.css  index-BPq1q_9G.js  index-BW1iCzsU.css  index-BXvPILhM.js  index-BcyYU7qa.js  index-BdZPwUJO.js  index-BgB5cknH.js  index-BgyaPpgU.css  index-Bh5eD2Kg.css  index-Bh6v21PH.css  index-BiL9kM0x.css  index-BiPleynR.css  index-BjDFLqQe.css  index-BkFt1ks0.js  index-Bs8EuaNc.js  index-BuH2eF8h.js  index-Bv9Jzdfq.js  index-BvHrfVXJ.css  index-C4B86ZKF.js  index-C6PgtDBA.css  index-C6bWQNXs.js  index-CDv8aVSo.css  index-CHUqs5ct.css  index-CRPY-r1Q.js  index-CSRs43DE.js  index-CXfhNeyI.js  index-Ca90rr0P.js  (+51 more)
crates/stackwise-cli/src/: cargo_mode.rs  cli.rs  config.rs  lib.rs  progress.rs  server.rs
crates/stackwise-cli/tests/: cli_smoke.rs
crates/stackwise-core/: Cargo.toml  README.md
crates/stackwise-core/src/: analyze.rs  elf_stack_sizes.rs  graph.rs  lib.rs  pdb_symbols.rs  pe_unwind.rs  report.rs  symbol_names.rs
crates/stackwise-core/tests/: report_schema.rs
docs/: release.md
fixtures/complex-tree/: Cargo.toml  build.rs
fixtures/complex-tree/src/: main.rs
fixtures/no-std-lib/: Cargo.toml
fixtures/no-std-lib/src/: lib.rs
fixtures/simple-std/: Cargo.toml
fixtures/simple-std/src/: main.rs
ui/stackwise-ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/stackwise-ui/src/: App.tsx  agentStatus.test.ts  agentStatus.ts  callGraph.test.ts  callGraph.ts  main.tsx  report.test.ts  report.ts  store.ts  styles.css  treemap.test.ts  treemap.ts
ui/stackwise-ui/tests/: example.spec.ts
