[workspace]
members = [
    "crates/stackwise-core",
    "crates/stackwise-cli",
]
exclude = [
    "fixtures/simple-std",
    "fixtures/no-std-lib",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nati/stackwise"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.2.1"
cargo_metadata = "0.23.1"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
iced-x86 = "1.21.0"
include_dir = "0.7.4"
insta = { version = "1.47.2", features = ["json", "redactions"] }
memmap2 = "0.9.10"
object = { version = "0.39.1", features = ["read", "compression"] }
open = "5.3.4"
pdb = "0.8.0"
proptest = "1.11.0"
predicates = "3.1.3"
rayon = "1.12.0"
rustc-demangle = "0.1.27"
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.27.0"
thiserror = "2.0.17"
tiny_http = "0.12.0"
toml = "0.9.8"
