[package]
name = "stackwise"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
camino.workspace = true
clap.workspace = true
iced-x86.workspace = true
include_dir.workspace = true
object.workspace = true
open.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
stackwise-core = { path = "../stackwise-core" }
tiny_http.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[[bin]]
name = "stackwise"
path = "src/bin/stackwise.rs"

[[bin]]
name = "cargo-stackwise"
path = "src/bin/cargo-stackwise.rs"
