[package]
name = "stackwise-core"
version = "0.3.1"
description = "Artifact-first Rust stack analysis engine used by Stackwise"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/stackwise-core"
categories = ["development-tools::debugging"]
keywords = ["stack", "rust", "analysis", "binary", "unwind"]

[dependencies]
camino.workspace = true
memmap2.workspace = true
object.workspace = true
pdb.workspace = true
rayon.workspace = true
rustc-demangle.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
